log
Wed 08 May 2024 06:53:13 PM UTC: 
 tests:  1|8
total_score: 0/70
41087f4
Wed 08 May 2024 06:54:59 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:48:5: error: expected identifier or ‘(’ before ‘return’
   48 |     return NULL;
      |     ^~~~~~
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
4bf1ab6
Wed 08 May 2024 06:55:05 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
cd9b23a
Wed 08 May 2024 06:59:28 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8371c4a
Wed 08 May 2024 07:02:23 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
6f6b600
Wed 08 May 2024 07:06:15 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e54b2eb
Wed 08 May 2024 07:06:28 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
3b9ee03
Wed 08 May 2024 07:12:19 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:113:16: error: implicit declaration of function ‘getMinimunNode’ [-Werror=implicit-function-declaration]
  113 |         return getMinimunNode(tree->current->right);
      |                ^~~~~~~~~~~~~~
treemap.c:113:16: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
  113 |         return getMinimunNode(tree->current->right);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1bb3cc3
Wed 08 May 2024 07:17:11 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:123:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  123 |         return getMinimunNode(tree->current->right); // Aquí, getMinimumNode es una función auxiliar que retorna el nodo con la clave mínima en un subárbol dado. Esta función es necesaria para encontrar el sucesor en el caso 1.
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0521d46
Wed 08 May 2024 07:22:44 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|6
total_score: 20/70
c7bb85c
